tests/negative/typecheck/addrof_poison.orng
fn main() -> Int  {
    &(0^)
    0
}